<resources>
    <string name="app_name">EDJUSTICE</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_login">Login</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_jan_shiksha_yatra">Jan Shiksha Yatra</string>
    <string name="menu_mentoring_challenge">Mentoring Challenge</string>
    <string name="menu_support_us">Support Us</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="home_second">Home Second</string>
</resources>
