<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.edjustice.ui.home.HomeFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.edjustice.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.edjustice.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_about_us"
        android:name="com.example.edjustice.ui.aboutus.AboutUsFragment"
        android:label="@string/menu_about_us"
        tools:layout="@layout/fragment_aboutus" />
    <fragment
        android:id="@+id/nav_jan_shiksha_yatra"
        android:name="com.example.edjustice.ui.janshikshayatra.JanShikshaYatraFragment"
        android:label="@string/menu_jan_shiksha_yatra"
        tools:layout="@layout/fragment_janshikshayatra" />
    <fragment
        android:id="@+id/nav_mentoring_challenge"
        android:name="com.example.edjustice.ui.mentoringchallenge.MentoringChallengeFragment"
        android:label="@string/menu_mentoring_challenge"
        tools:layout="@layout/fragment_mentoringchallenge" />
    <fragment
        android:id="@+id/nav_support_us"
        android:name="com.example.edjustice.ui.supportus.SupportUsFragment"
        android:label="@string/menu_support_us"
        tools:layout="@layout/fragment_supportus" />
    <fragment
        android:id="@+id/nav_contact_us"
        android:name="com.example.edjustice.ui.contactus.ContactUsFragment"
        android:label="@string/menu_contact_us"
        tools:layout="@layout/fragment_contactus" />
</navigation>